@@ -9,6 +9,12 @@ instance-level logging under "sqlalchemy.<module>.<classname>.<hexid>".
 Test suite includes "--log-info" and "--log-debug" arguments
 which work independently of --verbose/--quiet.  Logging added
 to orm to allow tracking of mapper configurations, row iteration.
+- internal refactoring to mapper instances() method to use a 
+SelectionContext object to track state during the operation.
+SLIGHT API BREAKAGE: the append_result() and populate_instances()
+methods on MapperExtension have a slightly different method signature
+now as a result of the change; hoping that these methods are not 
+in widespread use as of yet.
 - updates to MS-SQL driver: 
    -- fixes bug 261 (table reflection broken for MS-SQL case-sensitive 
    databases)
